--- a/property-service4/src/main/resources/application.properties
+++ b/property-service4/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/poc
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/poc
+spring.datasource.username=root
+spring.datasource.password=root
 
-spring.datasource.url=jdbc:mysql://localhost:3306/property_db3
-spring.datasource.username = root
-spring.datasource.password = root
+#spring.datasource.url=jdbc:mysql://localhost:3306/property_db3
+#spring.datasource.username = root
+#spring.datasource.password = root
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
